--- a/VisionBasics/.classpath
+++ b/VisionBasics/.classpath
@@ -2,13 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/WPILib.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/cscore.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/cscore-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/NetworkTables.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/NetworkTables-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/opencv.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/opencv-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/wpilib/java/current/lib/WPILib-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Theo Kachelski/Downloads/opencv/build/java/opencv-310.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
